--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SPM Alkanes Masterclass</title>
+  <title>SPM Alkanes Notes</title>
   <style>
     body {
       font-family: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -173,10 +173,7 @@
       <div class="progress-bar"><div id="match-progress" class="progress"></div></div>
     </div>
   </main>
-
-  <footer>
-    &copy; 2025 SPM Alkanes Masterclass. Designed for modern learning.
-  </footer>
+  
   <script>
     // ✅ Full 20 MCQ questions
     const mcqQuestions = [
