--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <h2>✅ Alkanes Notes</h2>
       <p><strong>Definition:</strong> Alkanes are saturated hydrocarbons — only single bonds, carbon & hydrogen only.</p>
       <p><strong>General Formula:</strong> CnH₂n₊₂</p>
-      <p><strong>Structure:</strong> Tetrahedral geometry (~109.5°), displayed & structural formulas.</p>
+      <p><strong>Structure:</strong> Tetrahedral geometry (~109.5°)</p>
       <p><strong>Naming:</strong></p>
       <table>
         <thead>
