--- a/index.html
+++ b/index.html
@@ -2,36 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Group 1 Periodic Table</title>
+  <title>Group 1 Periodic Table - Embed</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f0f0f0;
-    }
-    header {
-      background-color: #003366;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    iframe {
-      display: block;
-      width: 100%;
+      background-color: #f4f4f4;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
+    }
+
+    .iframe-container {
+      width: 90%;
+      max-width: 1000px;
+      height: 90vh;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
       border: none;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Group 1 Elements - Periodic Table</h1>
-  </header>
-  
-  <!-- 👇 Replace the src with your actual GitHub Pages link 👇 -->
-  <iframe src="https://andrewung2009.github.io/group1periodictable/group1-table.html"></iframe>
-
+  <div class="iframe-container">
+    <iframe 
+      src="https://andrewung2009.github.io/group1periodictable/group1-table.html" 
+      title="Group 1 Periodic Table">
+    </iframe>
+  </div>
 </body>
 </html>
